--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,11 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}Your personal Cookbook{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-    {% if not known %}
-    <p>Pleased to meet you!</p>
-    {% else %}
-    <p>Happy to see you again!</p>
-    {% endif %}
+    <p>You'd like a meal for {{ meal }}</p>
 </div>
 {{ wtf.quick_form(form) }}
 {% endblock %}
