added validation error for dietary restrictions

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 
 {% block title %}Your Personal Cookbook{% endblock %}
 
-{% block head %}
+<!-- {% block head %}
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-{% endblock %}
+{% endblock %} -->
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -20,11 +20,11 @@
             </button>
             <a class="navbar-brand" href="/">Your Personal Cookbook</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <!-- <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
 </div>
 {% endblock %}
